# C-

./: README.md
Task1/: CMakeLists.txt  README.md
Task1/src/: main.cpp
Task2/: CMakeLists.txt  README.md
Task2/include/: FEString.h
Task2/src/: FEString.cpp  main.cpp
Task3/: CMakeLists.txt  README.md  report.txt
Task3/include/: EuropeanOption.h  Option.h
Task3/src/: EuropeanOption.cpp  Option.cpp  main.cpp
Task4/: CMakeLists.txt  CMakeSettings.json  README.md  report.txt
Task4/include/: Bad.h
Task4/src/: Bad.cpp  main.cpp
